--- a/src/RndDotNet.HeadHunter.Client/RndDotNet.HeadHunter.Client.csproj
+++ b/src/RndDotNet.HeadHunter.Client/RndDotNet.HeadHunter.Client.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
+        <PackageVersion>0.0.1-alpha</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
