--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ maint ]    
+    branches: [ main ]    
 jobs:
   build:
     runs-on: ubuntu-latest
